Fix profile page redirect: redirect to login instead of homepage when not authenticated

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -142,8 +142,8 @@
                 }
             }
             
-            // If not authenticated, redirect to home
-            window.location.href = '/';
+            // If not authenticated, redirect to login
+            window.location.href = '/login';
         }
 
         function updateUserStatusInfo(userData) {
